<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:id="@+id/settingsPageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/counterLabel1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/counterLabel1"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/counterInput1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counterInputPlaceholder"
            android:paddingVertical="8dp"
            android:layout_marginBottom="30dp"
            android:inputType="textPersonName"
            android:autofillHints="username"/>


        <TextView
            android:id="@+id/counterLabel2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/counterLabel2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/counterInput2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counterInputPlaceholder"
            android:paddingVertical="8dp"
            android:layout_marginBottom="30dp"
            android:inputType="textPersonName"
            android:autofillHints="username"/>

        <TextView
            android:id="@+id/counterLabel3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/counterLabel3"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/counterInput3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/counterInputPlaceholder"
            android:paddingVertical="8dp"
            android:layout_marginBottom="30dp"
            android:inputType="textPersonName"
            android:autofillHints="username"/>

        <TextView
            android:id="@+id/maxCountLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/maxCountLabel"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/maxCountInput"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/maxCountInputPlaceholder"
            android:paddingVertical="8dp"
            android:layout_marginBottom="30dp"
            android:inputType="textPersonName"
            android:autofillHints="username"/>

        <Button
            android:id="@+id/saveCounterButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="25dp"
            android:layout_gravity="center"
            android:text="@string/saveCounterButton"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>