<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DataActivity">

    <LinearLayout
        android:id="@+id/dataPageLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <TextView
            android:id="@+id/eventLabelA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="10dp"
            android:text="@string/eventLabelA"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventLabelB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/eventLabelB"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/eventLabelC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/eventLabelC"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/totalEvents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/totalEvents"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/eventDataList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginVertical="20dp"
            android:textStyle="normal"
            />
    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>